versioned_docs/version-8.9/self-managed/components/orchestration-cluster/core-settings/configuration/partials/_processing.md
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Processing

<Tabs>
  <TabItem value="application.yaml" label="Application properties">

### `camunda.processing`

| Property                                                                       | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Default value |
| :----------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------ |
| `camunda.processing.max-commands-in-batch`                                     | <p>Sets the maximum number of commands processed within one batch.</p><p>The processor will process until no more follow-up commands are created by the initial command or the configured limit is reached.</p><p>Can be set to <code>1</code> to disable batch processing.</p><p>Must be a positive integer number.</p><p>Note that the resulting batch may contain more entries than this limit because it includes follow-up events. If the resulting batch is too large (see <code>maxMessageSize</code>), processing will be rolled back and retried with a smaller maximum batch size.</p> | `100`         |
| `camunda.processing.enable-async-scheduled-tasks`                              | <p>Allows scheduled processing tasks (for example, timed-out job checks) to run concurrently to regular processing.</p><p>This is a performance optimization to ensure that processing is not interrupted by higher than usual workload for any of the scheduled tasks.</p><p>Disable only to work around bugs where a scheduled task is not safe to run concurrently.</p><p>When enabled (default), deprecated task-specific async scheduling flags have no effect.</p>                                                                                                                         | `true`        |
| `camunda.processing.scheduled-tasks-check-interval`                            | <p>Configures how often a partition leader checks for expired scheduled tasks (for example, due date checking).</p><p>Use a lower interval to potentially decrease delays between requested and actual execution, but note that low values can create unnecessary load while idle; benchmark changes.</p>                                                                                                                                                                                                                                                                                        | `1s`          |
| `camunda.processing.skip-positions`                                            | <p>Allows skipping certain commands by their position.</p><p>This is intended for debugging and data recovery and is not recommended for production use.</p><p>The value is a comma-separated list of positions to skip. Whitespace is ignored.</p>                                                                                                                                                                                                                                                                                                                                              |               |
| `camunda.processing.engine.distribution.max-backoff-duration`                  | Allows configuring the maximum backoff duration for command redistribution retries. The retry interval is doubled after each retry until it reaches this maximum duration.                                                                                                                                                                                                                                                                                                                                                                                                                       | `5m`          |
| `camunda.processing.engine.distribution.redistribution-interval`               | Allows configuring command redistribution retry interval. This is the initial interval used when retrying command distributions that have not been acknowledged.                                                                                                                                                                                                                                                                                                                                                                                                                                 | `10s`         |
| `camunda.processing.enable-preconditions-check`                                | <p>Configures whether basic RocksDB operations (for example, insert/delete) should check preconditions (for example, key does not already exist when inserting).</p>                                                                                                                                                                                                                                                                                                                                                                                                                             | `false`       |
| `camunda.processing.enable-foreign-key-checks`                                 | <p>Configures whether inserting or updating key-value pairs in RocksDB should check that foreign keys exist.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | `false`       |
| `camunda.processing.enable-yielding-duedate-checker`                           | <p>Changes the due date timer checker behavior to yield to other processing steps when there are very many timers.</p><p>This avoids worst-case situations where processing could be blocked for an indefinite amount of time and the node becomes unhealthy.</p><p>Under sustained high load, yielding can cause activated timers to fall behind real time.</p>                                                                                                                                                                                                                                 | `true`        |
| `camunda.processing.enable-async-message-ttl-checker`                          | <p>When enabled, the message TTL checker runs asynchronously to the engine stream processor.</p><p>This can improve throughput/latency when many messages with a non-zero TTL are published. Test in non-production before enabling.</p>                                                                                                                                                                                                                                                                                                                                                         | `false`       |
| `camunda.processing.enable-async-timer-duedate-checker`                        | <p>When enabled, the due date checker runs asynchronously to the engine stream processor.</p><p>This can improve throughput/latency when there are many timers. Test in non-production before enabling.</p>                                                                                                                                                                                                                                                                                                                                                                                      | `false`       |
| `camunda.processing.enable-straightthrough-processing-loop-detector`           |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | `true`        |
| `camunda.processing.enable-message-body-on-expired`                            | <p>Controls whether the full message body is included in the follow-up event when a message expires.</p><p>When enabled, full message details can be exported by allowing <code>Message.EXPIRED</code> events, but it increases follow-up event size and can reduce how many messages can be expired per batch, potentially impacting performance and growth of expired message state.</p>                                                                                                                                                                                                       | `false`       |
| `camunda.processing.evaluate-boundary-event-correlation-key-in-activity-scope` | <p>Controls the scope used to evaluate the <code>correlationKey</code> expression of a message boundary event.</p><p>When enabled, the expression is evaluated in the activity's own (element instance) scope, consistent with the timer duration, message name, and signal name expressions of boundary events.</p><p>When disabled (default), the expression is evaluated in the flow scope instead. Requires a broker restart to take effect.</p>                                                                                                                                             | `false`       |
| `camunda.processing.flow-control.request.enabled`                              | <p>Enable request limiting for user requests (takes precedence over backpressure configuration).</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `true`        |
| `camunda.processing.flow-control.request.windowed`                             | <p>Use windowed request limiting.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `true`        |
| `camunda.processing.flow-control.request.algorithm`                            | <p>The request limiting algorithm to use.</p><p>Supported values: <code>aimd</code>, <code>fixed</code>, <code>vegas</code>, <code>gradient</code>, <code>gradient2</code>, <code>legacy-vegas</code>.</p>                                                                                                                                                                                                                                                                                                                                                                                       | `aimd`        |
| `camunda.processing.flow-control.request.aimd.request-timeout`                 | <p>AIMD: request timeout used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `200ms`       |
| `camunda.processing.flow-control.request.aimd.initial-limit`                   | <p>AIMD: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `100`         |
| `camunda.processing.flow-control.request.aimd.min-limit`                       | <p>AIMD: minimum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `1`           |
| `camunda.processing.flow-control.request.aimd.max-limit`                       | <p>AIMD: maximum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `1000`        |
| `camunda.processing.flow-control.request.aimd.backoff-ratio`                   | <p>AIMD: backoff ratio applied when backing off.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `0.9`         |
| `camunda.processing.flow-control.request.fixed.limit`                          | <p>Fixed: constant request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `20`          |
| `camunda.processing.flow-control.request.gradient.min-limit`                   | <p>Gradient: minimum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | `10`          |
| `camunda.processing.flow-control.request.gradient.initial-limit`               | <p>Gradient: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | `20`          |
| `camunda.processing.flow-control.request.gradient.rtt-tolerance`               | <p>Gradient: RTT tolerance used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `2.0`         |
| `camunda.processing.flow-control.request.gradient2.min-limit`                  | <p>Gradient2: minimum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | `10`          |
| `camunda.processing.flow-control.request.gradient2.initial-limit`              | <p>Gradient2: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | `20`          |
| `camunda.processing.flow-control.request.gradient2.rtt-tolerance`              | <p>Gradient2: RTT tolerance used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | `2.0`         |
| `camunda.processing.flow-control.request.gradient2.long-window`                | <p>Gradient2: long-window size used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `600`         |
| `camunda.processing.flow-control.request.vegas.alpha`                          | <p>Vegas: alpha parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | `3`           |
| `camunda.processing.flow-control.request.vegas.beta`                           | <p>Vegas: beta parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | `6`           |
| `camunda.processing.flow-control.request.vegas.initial-limit`                  | <p>Vegas: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `20`          |
| `camunda.processing.flow-control.request.legacy-vegas.initial-limit`           | <p>Legacy Vegas: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | `1024`        |
| `camunda.processing.flow-control.request.legacy-vegas.max-concurrency`         | <p>Legacy Vegas: maximum concurrency.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `1024*32`     |
| `camunda.processing.flow-control.request.legacy-vegas.alpha-limit`             | <p>Legacy Vegas: alpha limit parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | `0.7`         |
| `camunda.processing.flow-control.request.legacy-vegas.beta-limit`              | <p>Legacy Vegas: beta limit parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `0.95`        |
| `camunda.processing.flow-control.write.enabled`                                | <p>Enable write rate limiting.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | `false`       |
| `camunda.processing.flow-control.write.limit`                                  | <p>Sets the maximum number of records written per second.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | `0`           |
| `camunda.processing.flow-control.write.ramp-up`                                | <p>Sets the ramp up time for reaching the configured write rate limit (for example, <code>10s</code>).</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `0s`          |
| `camunda.processing.flow-control.write.throttle.enabled`                       | <p>Enable throttling. If enabled, throttle the write rate based on exporting backlog.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `false`       |
| `camunda.processing.flow-control.write.throttle.acceptable-backlog`            | <p>When exporting is a bottleneck, the write rate is throttled to keep the backlog at this value.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `100000`      |
| `camunda.processing.flow-control.write.throttle.minimum-limit`                 | <p>Even when exporting is fully blocked, always allow this many writes per second.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | `100`         |
| `camunda.processing.flow-control.write.throttle.resolution`                    | <p>How often to adjust the throttling.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `100s`        |

</TabItem>
<TabItem value="env" label="Environment variables">

### `CAMUNDA_PROCESSING`

| Property                                                                | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Default value |
| :---------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------ |
| `CAMUNDA_PROCESSING_MAXCOMMANDSINBATCH`                                 | <p>Sets the maximum number of commands processed within one batch.</p><p>The processor will process until no more follow-up commands are created by the initial command or the configured limit is reached.</p><p>Can be set to <code>1</code> to disable batch processing.</p><p>Must be a positive integer number.</p><p>Note that the resulting batch may contain more entries than this limit because it includes follow-up events. If the resulting batch is too large (see <code>maxMessageSize</code>), processing will be rolled back and retried with a smaller maximum batch size.</p> | `100`         |
| `CAMUNDA_PROCESSING_ENABLEASYNCSCHEDULEDTASKS`                          | <p>Allows scheduled processing tasks (for example, timed-out job checks) to run concurrently to regular processing.</p><p>This is a performance optimization to ensure that processing is not interrupted by higher than usual workload for any of the scheduled tasks.</p><p>Disable only to work around bugs where a scheduled task is not safe to run concurrently.</p><p>When enabled (default), deprecated task-specific async scheduling flags have no effect.</p>                                                                                                                         | `true`        |
| `CAMUNDA_PROCESSING_SCHEDULEDTASKSCHECKINTERVAL`                        | <p>Configures how often a partition leader checks for expired scheduled tasks (for example, due date checking).</p><p>Use a lower interval to potentially decrease delays between requested and actual execution, but note that low values can create unnecessary load while idle; benchmark changes.</p>                                                                                                                                                                                                                                                                                        | `1s`          |
| `CAMUNDA_PROCESSING_SKIPPOSITIONS`                                      | <p>Allows skipping certain commands by their position.</p><p>This is intended for debugging and data recovery and is not recommended for production use.</p><p>The value is a comma-separated list of positions to skip. Whitespace is ignored.</p>                                                                                                                                                                                                                                                                                                                                              |               |
| `CAMUNDA_PROCESSING_ENGINE_DISTRIBUTION_MAXBACKOFFDURATION`             | Allows configuring the maximum backoff duration for command redistribution retries. The retry interval is doubled after each retry until it reaches this maximum duration.                                                                                                                                                                                                                                                                                                                                                                                                                       | `5m`          |
| `CAMUNDA_PROCESSING_ENGINE_DISTRIBUTION_REDISTRIBUTIONINTERVAL`         | Allows configuring command redistribution retry interval. This is the initial interval used when retrying command distributions that have not been acknowledged.                                                                                                                                                                                                                                                                                                                                                                                                                                 | `10s`         |
| `CAMUNDA_PROCESSING_ENABLEPRECONDITIONSCHECK`                           | <p>Configures whether basic RocksDB operations (for example, insert/delete) should check preconditions (for example, key does not already exist when inserting).</p>                                                                                                                                                                                                                                                                                                                                                                                                                             | `false`       |
| `CAMUNDA_PROCESSING_ENABLEFOREIGNKEYCHECKS`                             | <p>Configures whether inserting or updating key-value pairs in RocksDB should check that foreign keys exist.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | `false`       |
| `CAMUNDA_PROCESSING_ENABLEYIELDINGDUEDATECHECKER`                       | <p>Changes the due date timer checker behavior to yield to other processing steps when there are very many timers.</p><p>This avoids worst-case situations where processing could be blocked for an indefinite amount of time and the node becomes unhealthy.</p><p>Under sustained high load, yielding can cause activated timers to fall behind real time.</p>                                                                                                                                                                                                                                 | `true`        |
| `CAMUNDA_PROCESSING_ENABLEASYNCMESSAGETTLCHECKER`                       | <p>When enabled, the message TTL checker runs asynchronously to the engine stream processor.</p><p>This can improve throughput/latency when many messages with a non-zero TTL are published. Test in non-production before enabling.</p>                                                                                                                                                                                                                                                                                                                                                         | `false`       |
| `CAMUNDA_PROCESSING_ENABLEASYNCTIMERDUEDATECHECKER`                     | <p>When enabled, the due date checker runs asynchronously to the engine stream processor.</p><p>This can improve throughput/latency when there are many timers. Test in non-production before enabling.</p>                                                                                                                                                                                                                                                                                                                                                                                      | `false`       |
| `CAMUNDA_PROCESSING_ENABLESTRAIGHTTHROUGHPROCESSINGLOOPDETECTOR`        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | `true`        |
| `CAMUNDA_PROCESSING_ENABLEMESSAGEBODYONEXPIRED`                         | <p>Controls whether the full message body is included in the follow-up event when a message expires.</p><p>When enabled, full message details can be exported by allowing <code>Message.EXPIRED</code> events, but it increases follow-up event size and can reduce how many messages can be expired per batch, potentially impacting performance and growth of expired message state.</p>                                                                                                                                                                                                       | `false`       |
| `CAMUNDA_PROCESSING_EVALUATEBOUNDARYEVENTCORRELATIONKEYINACTIVITYSCOPE` | <p>Controls the scope used to evaluate the <code>correlationKey</code> expression of a message boundary event.</p><p>When enabled, the expression is evaluated in the activity's own (element instance) scope, consistent with the timer duration, message name, and signal name expressions of boundary events.</p><p>When disabled (default), the expression is evaluated in the flow scope instead. Requires a broker restart to take effect.</p>                                                                                                                                             | `false`       |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_ENABLED`                        | <p>Enable request limiting for user requests (takes precedence over backpressure configuration).</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `true`        |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_WINDOWED`                       | <p>Use windowed request limiting.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `true`        |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_ALGORITHM`                      | <p>The request limiting algorithm to use.</p><p>Supported values: <code>aimd</code>, <code>fixed</code>, <code>vegas</code>, <code>gradient</code>, <code>gradient2</code>, <code>legacy-vegas</code>.</p>                                                                                                                                                                                                                                                                                                                                                                                       | `aimd`        |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_AIMD_REQUESTTIMEOUT`            | <p>AIMD: request timeout used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `200ms`       |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_AIMD_INITIALLIMIT`              | <p>AIMD: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `100`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_AIMD_MINLIMIT`                  | <p>AIMD: minimum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `1`           |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_AIMD_MAXLIMIT`                  | <p>AIMD: maximum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `1000`        |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_AIMD_BACKOFFRATIO`              | <p>AIMD: backoff ratio applied when backing off.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `0.9`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_FIXED_LIMIT`                    | <p>Fixed: constant request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `20`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT_MINLIMIT`              | <p>Gradient: minimum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | `10`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT_INITIALLIMIT`          | <p>Gradient: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | `20`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT_RTTTOLERANCE`          | <p>Gradient: RTT tolerance used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `2.0`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT2_MINLIMIT`             | <p>Gradient2: minimum request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | `10`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT2_INITIALLIMIT`         | <p>Gradient2: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | `20`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT2_RTTTOLERANCE`         | <p>Gradient2: RTT tolerance used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | `2.0`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_GRADIENT2_LONGWINDOW`           | <p>Gradient2: long-window size used by the algorithm.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `600`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_VEGAS_ALPHA`                    | <p>Vegas: alpha parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | `3`           |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_VEGAS_BETA`                     | <p>Vegas: beta parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | `6`           |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_VEGAS_INITIALLIMIT`             | <p>Vegas: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `20`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_LEGACYVEGAS_INITIALLIMIT`       | <p>Legacy Vegas: initial request limit.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | `1024`        |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_LEGACYVEGAS_MAXCONCURRENCY`     | <p>Legacy Vegas: maximum concurrency.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `1024*32`     |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_LEGACYVEGAS_ALPHALIMIT`         | <p>Legacy Vegas: alpha limit parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | `0.7`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_REQUEST_LEGACYVEGAS_BETALIMIT`          | <p>Legacy Vegas: beta limit parameter.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `0.95`        |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_ENABLED`                          | <p>Enable write rate limiting.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | `false`       |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_LIMIT`                            | <p>Sets the maximum number of records written per second.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | `0`           |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_RAMPUP`                           | <p>Sets the ramp up time for reaching the configured write rate limit (for example, <code>10s</code>).</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `0s`          |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_THROTTLE_ENABLED`                 | <p>Enable throttling. If enabled, throttle the write rate based on exporting backlog.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `false`       |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_THROTTLE_ACCEPTABLEBACKLOG`       | <p>When exporting is a bottleneck, the write rate is throttled to keep the backlog at this value.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `100000`      |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_THROTTLE_MINIMUMLIMIT`            | <p>Even when exporting is fully blocked, always allow this many writes per second.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | `100`         |
| `CAMUNDA_PROCESSING_FLOWCONTROL_WRITE_THROTTLE_RESOLUTION`              | <p>How often to adjust the throttling.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `100s`        |

  </TabItem>
</Tabs>
